--- a/NubikBuild21/index.html
+++ b/NubikBuild21/index.html
@@ -16,7 +16,21 @@
 
 
 
-
+	<style>
+  body {
+    /* Убираем скролл */
+    overflow: hidden;
+          
+    /* Убираем лонгтап на IOS */
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+  }
+</style>
 </head>
 <body class="dark">
     <div id="unity-container" class="unity-desktop">
